tile content aligning for mobile resolution fix, dai logo fix

--- a/apps/block_scout_web/assets/css/components/_tile.scss
+++ b/apps/block_scout_web/assets/css/components/_tile.scss
@@ -104,6 +104,18 @@ $tile-body-a-color: #5959d8 !default;
   padding: 0 5px;
 }
 
+.tile-transaction-type-block {
+  .tile-status-label {
+    padding: 0;
+  }
+}
+
+.tile-bottom {
+  @media (max-width: 767px) {
+    justify-content: flex-start !important;
+  }
+}
+
 .tile-bottom-contents {
   background-color: #f6f7f9;
   font-size: 12px;
